--- a/css/signup.css
+++ b/css/signup.css
@@ -1,7 +1,12 @@
-body { padding-top:30px; 
-background: url('http://farm3.staticflickr.com/2832/12303719364_c25cecdc28_b.jpg') fixed;
+body {
+    background: url('http://farm3.staticflickr.com/2832/12303719364_c25cecdc28_b.jpg') fixed;
     background-size: cover;
     padding: 0;
     margin: 0;
 }
 .form-control { margin-bottom: 10px; }
+
+container-customss{
+    width: 100%;
+    vertical-align: central;
+}
