--- a/css/signup.css
+++ b/css/signup.css
@@ -10,3 +10,9 @@ container-customss{
     width: 100%;
     vertical-align: central;
 }
+
+.well-custom{
+    float:none;
+    margin: 100px auto;
+    max-width: 50%;
+}
