--- a/css/custom.css
+++ b/css/custom.css
@@ -177,6 +177,19 @@ iframe {
 	color: white;
 }
 
+/*----------------------------SIGNIN/SIGNUP------------------------------*/
+.form-control { margin-bottom: 10px; }
+
+container-customss{
+    width: 100%;
+    vertical-align: central;
+}
+
+.well-custom{
+    float:none;
+    margin: 100px auto;
+    max-width: 50%;
+}
 
 
 
