conflict di css
custom.css ada '.btn' di bootstrap juga ada '.btn'

--- a/css/custom.css
+++ b/css/custom.css
@@ -394,9 +394,9 @@ ol, ul {
 .panel-footer{
     background:#fff;
 }
-.btn{
+/*.btn{
     border-radius: 1px;
-}
+}*/
 .btn-sm, .btn-group-sm > .btn{
     border-radius: 1px;
 }
