--- a/css/custom.css
+++ b/css/custom.css
@@ -501,18 +501,9 @@ hr{
 .menu .navbar-right .modal .modal-body .form-control {
   height: 40px;
 }
-.container-customss{
-    width: 100%;
-    vertical-align: central;
-}
-.container-customss .form-control {
-  margin-bottom: 10px;
-  height: 40px;
-}
-.well-custom{
-    float:none;
-    margin: 100px auto;
-    max-width: 50%;
+
+.modal-content {
+  text-align: left;
 }
 
 .headline{
