--- a/css/custom.css
+++ b/css/custom.css
@@ -1,3 +1,5 @@
+
+/*---------------------------------------CSS ONLINESHOP-----------------------------------------*/
 body {
 	background-color: #EDEDED;
 	font-family: 'Open Sans', sans-serif;
