--- a/css/customnews.css
+++ b/css/customnews.css
@@ -13,7 +13,10 @@ header ul li a {
     width: 300px;
 }
 .font {
-    padding-top: 50px;
+    padding-top: 30px;
+}
+.font h1 {
+    margin-top: 0px;
 }
 .menu {
     background-color: #399ADE;
