--- a/css/customnews.css
+++ b/css/customnews.css
@@ -38,10 +38,10 @@ header ul li a {
 .brand img {
     width: 150px;
 }
-.brand .font {
+.font {
     padding-top: 100px;
 }
-.brand .font h1 {
+.font h1 {
     margin-top: 0px;
 }
 .menu {
